# gonzo

./: .gitignore  .prettierrc  Dockerfile  README.md  Snakefile  activate.sh  archive.sh  environment.yml  gonzo-pipeline.sh  myst.yml  pyproject.toml  snakebatch  snakebatch.sh  snakeconfig.yaml
.github/workflows/: deploy-docs.yml  deploy-pages.yml
build-record/: README.md  archive.sh  pipeline-leaf-files.txt
docker/: Dockerfile  activate-singularity.sh  activate.sh  download-deps.sh  entrypoint.sh
docs/: LL-T1map-generation.ipynb  LL-regions.mgz  _config.yml  _toc.yml  comparison-t1map-looklocker-nICE.ipynb  comparison-t1map-mixed-looklocker.ipynb  concentration-estimates.ipynb  download-data.md  execute-and-build.sh  free-fast-surfer.ipynb  gonzo-dicom-extraction.ipynb  gonzo-readme-setup.ipynb  index.md  ll-curvefit-examples.npz  looklocker-processing.ipynb  mesh-mapping-error.ipynb  mixed-t1map-processing.ipynb  mri-visualization.ipynb  myst.yml  normalization-of-t1-weighted-images.ipynb  references.bib  setup-pipeline.md  total-intracranial-content.ipynb  tracer-concentration-estimation.ipynb
envs/: fastsurfer.yml  gonzo.yml
mri_dataset/: blood_concentrations.csv  timetable.tsv
notebooks/: Gonzo-DICOM-extraction.ipynb
scripts/: concat_tables.py  convert_surfaces.py  extract_timestamps.py  fastsurfer.py  freesurfer.py  mask_csf.py  zenodo_download.py
scripts/mri_noise_analysis/: README.md  common.py  plot_curvefits_look_locker.py  requirements.txt  tabulate_noise_combined.py
singularity/: fs-greedy.def  gmri2fem.def  gonzo-conda.def  gonzo.def
snakeprofiles/local/: config.yaml
snakeprofiles/local-singularity/: config.yaml
src/brainmeshing/: _cli.py  gray_matter_surfaces.py  mesh_generation.py  mesh_segments.py  remove_ventricles.py  surfaces.py  utils.py  ventricles.py  white_gray_separation.py  white_matter_surfaces.py
src/dti/: _cli.py  dti_data_to_mesh.py  reslice_dti.py  utils.py
src/gmri2fem/: _cli.py
src/gonzo/: _cli.py  clean_dti_data.py  concentrations_to_mesh.py  dti_data_to_mesh.py  estimate_concentration.py  estimate_mixed_t1maps.py  extract_ventricles.py  hybrid_t1map.py  hybrid_t1maps.py  looklocker_t1map.py  looklocker_to_T1map.py  masking.py  mixed_dicom.py  mixed_t1map.py  mri2fenics.py  normalize_images.py  orbital_refroi.py  regionwise_statistics.py  reslice_4d.py  reslice_dti.py  segment_tools.py  segmentation_refinement.py  simple_mri.py  t1maps.py  t1w_signal_increase.py  utils.py
src/i2m/: _cli.py  collect_mesh_data.py  vtk_converter.py
workflows/: T1maps  T1maps.smk  T1w  T1w.smk  concentration-estimate  concentration-estimate.smk  dti  dti.smk  mesh-generation  mesh-generation.smk  mri2fem  mri2fem.smk  recon-all  recon-all.smk  register  register.smk  segment  segment.smk  statistics.smk  timestamps.smk
