[project]
name = "gonzo"
authors = [
  { name = "Jørgen Riseth", email = "jnriseth@gmail.com" },
  { name = "Timo Koch" },
]
version = "0.1.0"
requires-python = ">=3.9,<3.12"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []


[tool.pixi.project]
channels = [
  "conda-forge/label/fenics-dev",
  "conda-forge",
  "bioconda",
  "https://fsl.fmrib.ox.ac.uk/fsldownloads/fslconda/public/",
  "jorgenriseth",
]
platforms = ["linux-64"]

[tool.pixi.dependencies]
snakemake = ">9"
svmtk = ">=2.0.1"
fenics = ">=2019.2.0.dev20240219,<2020"
dcm2niix = ">=1.0.20250506,<2"
numpy = "<2"
matplotlib = ">=3.10.3,<4"
panta-rhei = ">=0.6.2,<0.7"
pyvista = "<0.45"
tqdm = ">=4.67.1,<5"
trame = ">=3.11.0,<4"
loguru = ">=0.7.3,<0.8"
apptainer = ">=1.4.1,<2"
squashfuse = ">=0.6.1,<0.7"
gocryptfs = ">=2.6.0,<3"
snakemake-executor-plugin-cluster-generic = ">=1.0.9,<2"
gmri2fem = ">=0.2.1,<0.3"
fsl-eddy = ">=2401.2,<2402"
fsl-topup = ">=2203.5,<2204"
fsl-fdt = ">=2202.11,<2203"

[tool.pixi.pypi-dependencies]

[tool.pixi.tasks]
