[project]
name = "gonzo"
authors = [
  { name = "Jørgen Riseth", email = "jnriseth@gmail.com" },
  { name = "Timo Koch" },
]
version = "0.1.0"
requires-python = ">=3.9,<3.12"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["simple-mri>=0.1.6,<0.2"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []


[tool.pixi.workspace]
channels = [
  "conda-forge/label/fenics-dev",
  "conda-forge",
  "bioconda",
  "https://fsl.fmrib.ox.ac.uk/fsldownloads/fslconda/public/",
  "jorgenriseth",
]
platforms = ["linux-64"]

[tool.pixi.dependencies]
snakemake = ">=9.9.0,<10"
svmtk = ">=2.0.1,<3"
fenics = ">=2019.2.0.dev20240219,<2020"
dcm2niix = ">=1.0.20250506,<2"
numpy = ">=2.3.2,<3"
matplotlib = ">=3.10.3,<4"
panta-rhei = ">=0.7.1a,<0.8"
pyvista = "<0.45"
tqdm = ">=4.67.1,<5"
trame = ">=3.11.0,<4"
loguru = ">=0.7.3,<0.8"
snakemake-executor-plugin-cluster-generic = ">=1.0.9,<2"
gmri2fem = ">=0.2.8,<0.3"
fsl-eddy = ">=2401.2,<2402"
fsl-topup = ">=2203.5,<2204"
fsl-fdt = ">=2202.11,<2203"
fsl-bet2 = ">=2111.8,<2112"
setuptools = ">=79.0.1,<80"
vtk = "<9.4"
notebook = "<7"
jupyter_server = "<2"
seaborn = "*"
scikit-learn = "*"
scikit-image = "<0.25"
jupyter-book = ">=1.0.0,<2"
ghp-import = ">=2.1.0,<3"

[tool.pixi.pypi-dependencies]
#gmri2fem = { path = "../gmri2fem/", editable = true }

[tool.pixi.tasks]

[tool.pixi.activation]
env = { FSLDIR = "$CONDA_PREFIX", FSLOUTPUTTYPE = "NIFTI_GZ", MPLCONFIGDIR = "$CONDA_PREFIX/matplotlib", DIJITSO_CACHE_DIR = "$HOME/.cache" }
